Feat/alert (#3)
* feat: add permanent alert

* feat: modify alert design

* chore: format the code